仕事について書いた&デザイン少し修正した

--- a/index.html
+++ b/index.html
@@ -22,36 +22,58 @@
 </section>
 
 <section class="description">
-    <h2>とくちょう</h2>
-    <ul>
-        <li>赤髪</li>
-        <li>OpenJDKｺﾝﾄﾘﾋﾞｭｰﾀｰらしいよ、パッチもっとかこうがんばろう</li>
-        <li>へいわにはたらきたい</li>
-    </ul>
-    <h2>すき</h2>
-    <ul>
-        <li>ラーメン二郎</li>
-        <li>イクラ</li>
-    </ul>
-    <h2>べんきょーかいすたっふ</h2>
-    <ul>
-        <li><a href="https://javajo.doorkeeper.jp/">Java女子部</a></li>
-        <li><a href="https://gtuggirls.connpass.com/">GTUG Girls</a></li>
-    </ul>
-    <h2>すきる</h2>
-    <ul>
-        <li>GoとReactでwebやったり</li>
-        <li>Java（Spring使ってwebやったり）</li>
-        <li>Python（Spark使ってバッチ書いたり）</li>
-        <li>PHP/HTML/CSS/sass/JavaScript とか</li>
-    </ul>
-    <h2>かいたほん</h2>
-    <ul>
-        <li>Goの本「<a href="https://booth.pm/ja/items/1920519">愛Go遊GoウィーGo!!</a>」（技術書典8）</li>
-        <li>Goの本「<a href="https://techbookfest.org/product/5410766247165952?productVariantID=6015334293176320">Go祭2020</a>」（技術書典9）</li>
-    </ul>
-    <h2>ほしいもの</h2>
-    <li><a href="https://www.amazon.co.jp/hz/wishlist/ls/3S5N8R3NDVNA5?ref_=wl_share">Amazon</a></li>
+    <h2>> しごと</h2>
+    <div class="description__content">
+        サーバーサイドエンジニア （時々フロントエンドとかコーディングもやる）
+    </div>
+
+    <h2>> とくちょう</h2>
+    <div class="description__content">
+        <ul>
+            <li>赤髪</li>
+            <li>OpenJDKｺﾝﾄﾘﾋﾞｭｰﾀｰらしいよ、パッチもっとかこうがんばろう</li>
+            <li>へいわにはたらきたい</li>
+        </ul>
+    </div>
+
+    <h2>> すき</h2>
+    <div class="description__content">
+        <ul>
+            <li>ラーメン二郎</li>
+            <li>イクラ</li>
+        </ul>
+    </div>
+
+    <h2>> べんきょーかいすたっふ</h2>
+    <div class="description__content">
+        <ul>
+            <li><a href="https://javajo.doorkeeper.jp/">Java女子部</a></li>
+            <li><a href="https://gtuggirls.connpass.com/">GTUG Girls</a></li>
+        </ul>
+    </div>
+
+    <h2>> すきる</h2>
+    <div class="description__content">
+        <ul>
+            <li>GoとReactでwebやったり</li>
+            <li>Java（Spring使ってwebやったり）</li>
+            <li>Python（Spark使ってバッチ書いたり）</li>
+            <li>PHP/HTML/CSS/sass/JavaScript とか</li>
+        </ul>
+    </div>
+
+    <h2>> かいたほん</h2>
+    <div class="description__content">
+        <ul>
+            <li>Goの本「<a href="https://booth.pm/ja/items/1920519">愛Go遊GoウィーGo!!</a>」（技術書典8）</li>
+            <li>Goの本「<a href="https://techbookfest.org/product/5410766247165952?productVariantID=6015334293176320">Go祭2020</a>」（技術書典9）</li>
+        </ul>
+    </div>
+
+    <h2>> ほしいもの</h2>
+    <div class="description__content">
+        <a href="https://www.amazon.co.jp/hz/wishlist/ls/3S5N8R3NDVNA5?ref_=wl_share">Amazon</a>
+    </div>
 </section>
 </body>
 </html>
