--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Profile</title>
-    <link href="css/style.css?v=20201003" rel="stylesheet"/>
+    <link href="css/style.css?v=20201003-2" rel="stylesheet"/>
 </head>
 
 <body>
