色々情報更新

--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 
 <body>
 <section class="main-prof">
-    <img src="image/profile.jpg" alt="icon" class="main-prof__prof-img"/>
-    <div>
+    <img src="image/profile.jpg" alt="icon" class="main-prof__img"/>
+    <div class="main-prof__name-wrapper">
         <h1>えばた あや</h1>
         <div class="main-prof__icon-wrapper">
             <a href="https://twitter.com/aya_122"><img src="image/twitter.svg" alt="twitter"/></a>
             <a href="https://github.com/AyaEbata"><img src="image/github.svg" alt="github"/></a>
             <a href="https://www.slideshare.net/AyaEbata"><img src="image/slideshare.svg" alt="slideshare"/></a>
+            <a href="https://speakerdeck.com/aya_ebata"><img src="image/speakerdeck.svg" alt="speakerdeck"/></a>
             <a href="mailto:ayaaaaa.0u0w@gmail.com"><img src="image/mail.svg" alt="mail"/></a>
         </div>
     </div>
@@ -24,15 +25,17 @@
 <section class="description">
     <h2>> しごと</h2>
     <div class="description__content">
-        サーバーサイドエンジニア （時々フロントエンドとかコーディングもやる）
+        <li>バックエンドエンジニア</li>
+        <li>全然フロントエンドもやる、というか両方やる</li>
+        <li>たまにインフラもやる</li>
     </div>
 
     <h2>> とくちょう</h2>
     <div class="description__content">
         <ul>
             <li>赤髪</li>
-            <li>OpenJDKｺﾝﾄﾘﾋﾞｭｰﾀｰらしいよ、パッチもっとかこうがんばろう</li>
             <li>へいわにはたらきたい</li>
+            <li>OpenJDKｺﾝﾄﾘﾋﾞｭｰﾀｰらしいよ、パッチもっとかこうがんばろう（結構前にpushしたお）</li>
         </ul>
     </div>
 
@@ -41,6 +44,8 @@
         <ul>
             <li>ラーメン二郎</li>
             <li>イクラ</li>
+            <li>リラックマ</li>
+            <li>ポケモン</li>
         </ul>
     </div>
 
@@ -55,10 +60,11 @@
     <h2>> すきる</h2>
     <div class="description__content">
         <ul>
-            <li>GoとReactでwebやったり</li>
+            <li>Go（echoとかginとか）</li>
+            <li>Python（バッチ書いたり）</li>
             <li>Java（Spring使ってwebやったり）</li>
-            <li>Python（Spark使ってバッチ書いたり）</li>
-            <li>PHP/HTML/CSS/sass/JavaScript とか</li>
+            <li>TypeScript（ReactとかVueとかバックエンドと一緒に書いちゃう）</li>
+            <li>その他 PHP / HTML / CSS / sass / JavaScript / AWS / GCP とか</li>
         </ul>
     </div>
 
@@ -67,6 +73,7 @@
         <ul>
             <li>Goの本「<a href="https://booth.pm/ja/items/1920519">愛Go遊GoウィーGo!!</a>」（技術書典8）</li>
             <li>Goの本「<a href="https://techbookfest.org/product/5410766247165952?productVariantID=6015334293176320">Go祭2020</a>」（技術書典9）</li>
+            <li>Goの本「<a href="https://techbookfest.org/product/5127270203129856">Goでちょっとひといき</a>」（技術書店11）</li>
         </ul>
     </div>
 
