スタイルのwq修正

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 <section class="main-prof">
-    <img src="image/profile.jpg" alt="icon" class="main-prof__img"/>
+    <img src="image/profile.jpg" alt="icon" class="main-prof__prof-img"/>
     <div class="main-prof__name-wrapper">
         <h1>えばた あや</h1>
         <div class="main-prof__icon-wrapper">
